mostly automated cleanup